--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>vplugin-pagination</title>
+    <title>pagination-vplugin</title>
   </head>
   <body>
     <div id="app"></div>
